[RM-005] entity 연관관계(@OneToMany, @ManyToOne) 제거