@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,27 +22,31 @@ public class PostService {
         List<PostEntity> postEntityList = postRepository.findAll();
 
         return postEntityList.stream()
-                .map(Post::from)
-                .collect(Collectors.toList());
+                .map(i -> Post.from(i, companyRepository.findById(i.getCompanyId()).orElseThrow(IllegalArgumentException::new).getCompanyName()))
+                .toList();
     }
 
     public PostWithOtherPosts getPost(Long postId) {
         PostEntity postEntity = postRepository.findById(postId).orElseThrow(IllegalArgumentException::new);
+        Company company = companyRepository.findById(postEntity.getCompanyId()).orElseThrow(IllegalArgumentException::new);
 
-        return PostWithOtherPosts.from(postEntity);
+        return PostWithOtherPosts.from(postEntity, company);
     }
 
+    @Transactional
     public Post createPost(Long companyId, Post post) {
         Company company = companyRepository.findById(companyId).orElseThrow(IllegalArgumentException::new);
-        PostEntity postEntity = post.toEntity(company);
+        PostEntity postEntity = post.toEntity(companyId);
         postRepository.save(postEntity);
+        company.add(postEntity.getId());
 
-        return Post.from(postEntity);
+        return Post.from(postEntity, company.getCompanyName());
     }
 
     @Transactional
     public Post editPost(Long postId, Post post) {
         PostEntity postEntity = postRepository.findById(postId).orElseThrow(IllegalArgumentException::new);
+        Company company = companyRepository.findById(postEntity.getCompanyId()).orElseThrow(IllegalArgumentException::new);
         PostEntityUpdatePolicy updatePolicy = PostEntityUpdatePolicy.builder()
                 .position(post.position())
                 .skill(post.skill())
@@ -51,11 +54,15 @@ public class PostService {
                 .build();
         PostEntity editPostEntity = postEntity.edit(updatePolicy);
 
-        return Post.from(editPostEntity);
+        return Post.from(editPostEntity, company.getCompanyName());
     }
 
+    @Transactional
     public void deletePost(Long postId) {
         PostEntity postEntity = postRepository.findById(postId).orElseThrow(IllegalArgumentException::new);
+        Company company = companyRepository.findById(postEntity.getCompanyId()).orElseThrow(IllegalArgumentException::new);
+        company.removePost(postId);
+
         postRepository.delete(postEntity);
     }
 }
